Update role bindings for new SA
Signed-off-by: John Collier <John.J.Collier@ibm.com>

--- a/setup/install_che/codewind-rolebinding.yaml
+++ b/setup/install_che/codewind-rolebinding.yaml
@@ -14,7 +14,7 @@ metadata:
   name: codewind-rolebinding
 subjects:
 - kind: ServiceAccount
-  name: che-workspace
+  name: codewind
 roleRef:
   kind: ClusterRole
   name: eclipse-codewind
